crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_builder_defaults.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: wo_value
---
{
  "config": {
    "env": {},
    "max_budget_usd": null,
    "max_turns": null,
    "model": null,
    "vendor": {}
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "id": "[uuid]",
  "lane": "patch_first",
  "policy": {
    "allow_network": [],
    "allowed_tools": [],
    "deny_network": [],
    "deny_read": [],
    "deny_write": [],
    "disallowed_tools": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "task": "simple task",
  "workspace": {
    "exclude": [],
    "include": [],
    "mode": "staged",
    "root": "."
  }
}
