crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_event_assistant_delta.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: event
---
{
  "ts": "2024-06-15T12:30:00Z",
  "type": "assistant_delta",
  "text": "Here's how to "
}
