crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_event_command_executed.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: event
---
{
  "ts": "2024-06-15T12:30:00Z",
  "type": "command_executed",
  "command": "cargo test -- --nocapture",
  "exit_code": 0,
  "output_preview": "test result: ok. 42 passed; 0 failed"
}
