crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_event_file_changed.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: event
---
{
  "ts": "2024-06-15T12:30:00Z",
  "type": "file_changed",
  "path": "src/oauth2.rs",
  "summary": "added PKCE challenge generation"
}
