crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_event_run_completed.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: event
---
{
  "ts": "2024-06-15T12:30:00Z",
  "type": "run_completed",
  "message": "all tasks done"
}
