crates/abp-core/tests/snapshots/snapshot_comprehensive__comprehensive_event_tool_result.snap
---
source: crates/abp-core/tests/snapshot_comprehensive.rs
expression: event
---
{
  "ts": "2024-06-15T12:30:00Z",
  "type": "tool_result",
  "tool_name": "write",
  "tool_use_id": "toolu_abc123",
  "output": {
    "bytes_written": 18,
    "path": "src/auth.rs"
  },
  "is_error": false
}
